Made a few edits to the homepage. Mostly fixing mobile styles, including the button boxes and the header sizes to make them less obtuse on mobile.

--- a/devwp/sass/globals/_buttons.scss
+++ b/devwp/sass/globals/_buttons.scss
@@ -26,7 +26,7 @@
   font-size: 1rem;
   line-height: 1;
   margin: 20px;
-  padding: 1.2em 2.8em;
+  padding: 1.2em 2em;
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
@@ -39,6 +39,12 @@
   }
 }
 
+//Width fix for button length on mobile.
+@media screen and (min-width: 40em) {
+  .btn {
+    padding: 1.2em 2.8em;
+  }
+}
 
 //*********************************************
 //************* BUTTON STYLE 1 ****************
