--- a/devwp/sass/globals/_knockout-logo.scss
+++ b/devwp/sass/globals/_knockout-logo.scss
@@ -17,10 +17,9 @@
   .knockout-logo img {
     position: relative;
     margin: auto;
-    width: 300px;
+    width: 100px;
 
   }
-
   .headline {
     position: relative;
     z-index: 5;
