--- a/devwp/sass/globals/_typography.scss
+++ b/devwp/sass/globals/_typography.scss
@@ -66,6 +66,13 @@ h4 {
   color: $primary;
 }
 
+//Mobile Styles
+@media screen and (max-width: 39.9375em) {
+  .mobile-heading-small {
+    font-size: $medium;
+  }
+}
+
 
 
 //*********************************************
